--- a/main.ipynb
+++ b/main.ipynb
@@ -37,7 +37,7 @@
         "model  | F1 macro | F1 micro | best loss\n",
         "------------- | ------------- | -------------| -------------\n",
         "fasttext + BPE + BERT + flair (100 epoch)| 0.913 | 0.928 |  0.11\n",
-        "glove + BERT + flair | 0.907 | 0.922 | \n",
+        "glove + BERT + flair | 0.907 | 0.922 | 0.23 \n",
         "fasttext + BPE + BERT | 0.906 | 0.921 | 0.24\n",
         "flair + glove (100 epoch) | 0.912 | 0.926 | 0.19\n",
         "DistilBERT (fine tune) + flair + glove | 0.873 | 0.887 | 0.2"
